# readdit

./: .appdata.xml  .buildconfig  .gitignore  Program  README.md  build.sh  meson.build  run.sh  style.css
data/: application.css  com.github.xchan14.readdit.appdata.xml.in  com.github.xchan14.readdit.desktop.in  com.github.xchan14.readdit.gresource.xml  com.github.xchan14.readit.appdata.xml.in  com.github.xchan14.readit.desktop  com.github.xchan14.readit.gresource.xml  io.github.xchan14.readdit.appdata.xml.in  io.github.xchan14.readdit.desktop.in  io.github.xchan14.readdit.gresource.xml  io.github.xchan14.readdit.metinfo.xml
debian/: changelog  control  copyright
po/: POTFILES  com.github.xchan14.readdit.pot  com.github.xchan14.readit.pot  de.po  es.po
src/: Action.vala  AppBody.vala  AppHeaderBar.vala  AppMainWindow.vala  Application.vala  Contants.vala  Dispatcher.vala  Main.vala  MainWindow.vala  Program.vala
src/Backend/DataStores/: PostStore.vala  UserStore.vala
src/Comments/: CommentItem.vala  CommentList.vala
src/DataStores/: PostStore.vala  UserStore.vala
src/DataStores/Parsers/: CommentParser.vala  PostParser.vala
src/Models/Comments/: Comment.vala  CommentCollection.vala  LoadMoreCommentsAction.vala  LoadPostCommentsAction.vala
src/Models/Posts/: LoadMorePostsAction.vala  LoadPostDetailsImageAction.vala  LoadPostPreviewAction.vala  Post.vala  ViewPostAction.vala
src/Models/Users/: User.vala
src/Posts/: Post.vala  PostDetailsPane.vala  PostDetailsView.vala  PostListItemView.vala  PostListView.vala  PostPane.vala  PostStore.vala
src/Posts/PostDetails/: LoadPostDetailsImageAction.vala  NoSelectedPostDetailsView.vala  PostDetailsContentView.vala  PostDetailsView.vala  PostDetailsViewModel.vala
src/Posts/PostDetails/Comments/: Comment.vala  CommentCollection.vala  CommentCollectionView.vala  CommentItemView.vala  LoadMoreCommentsAction.vala  LoadPostCommentsAction.vala
src/Posts/PostList/: LoadMorePostsAction.vala  LoadPostPreviewAction.vala  PostListItemView.vala  PostListView.vala  ViewPostAction.vala
src/Posts/PostList/PostListItem/: PostListItemView.vala  PostListItemViewModel.vala
src/Screens/: PostScreen.vala
src/Subreddits/: SubredditPane.vala
src/Users/: User.vala
src/Utils/: DateUtils.vala  FormatUtils.vala  HttpUtils.vala  ImageUtils.vala
src/Views/: MainWindow.vala
src/Views/Comments/: CommentCollectionView.vala  CommentItemView.vala
src/Views/Layout/: MainContent.vala  Sidebar.vala
src/Views/PostDetails/: EmptyPostDetailsView.vala  PostDetailsContentView.vala  PostDetailsView.vala
src/Views/PostList/: PostListItemView.vala  PostListView.vala
src/Views/Widgets/: VideoPlayer.vala
src/Widgets/: AppBody.vala  AppMainWindow.vala
styles/: style.css
